--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,24 +1,20 @@
-<div>
-  <div style="background-color:blue">
-    <img [src]="images" alt="" />
+
+<div fxFlexFill fxLayout="column">
+  <div fxFlex="16.5" style="background-color:turquoise;">
+      <img [src]="saulogo" alt=''>
   </div>
-  <div class="animinated">
-    <nav mat-tab-nav-bar mat-align-tabs="end">
-      <a mat-tab-link [routerLink]="['/dashboard/homes']" routerLinkActive #rla1="routerLinkActive"
-        [active]="rla1.isActive">
+  <div fxFlex="6.5">
+    <nav mat-tab-nav-bar mat-align-tabs="end" class="alignright">
+      <a mat-tab-link [routerLink]="['/dashboard/home']" routerLinkActive #rla1="routerLinkActive" [active]="rla1.isActive">
         HOME
       </a>
-      <a mat-tab-link [routerLink]="['/dashboard/matches']" routerLinkActive #rla2="routerLinkActive"
-        [active]="rla2.isActive" [matMenuTriggerFor]="match" #matchTrigger="matMenuTrigger"
-        (mouseover)="matchTrigger.openMenu()">
+      <a mat-tab-link [matMenuTriggerFor]='matchMenu'>
         MATCHES
       </a>
-      <a mat-tab-link [routerLink]="['/dashboard/players']" routerLinkActive #rla3="routerLinkActive"
-        [active]="rla3.isActive">
+      <a mat-tab-link [matMenuTriggerFor]='playerMenu'>
         PLAYERS
       </a>
-      <a mat-tab-link [routerLink]="['/dashboard/stastics']" routerLinkActive #rla4="routerLinkActive"
-        [active]="rla4.isActive">
+      <a mat-tab-link [matMenuTriggerFor]='staticMenu'>
         STASTICS
       </a>
       <a mat-tab-link [routerLink]="['/dashboard/login']" routerLinkActive #rla5="routerLinkActive"
@@ -30,16 +26,30 @@
         REGISTER
       </a>
     </nav>
+    <mat-menu #playerMenu="matMenu" class="customize">
+      <a mat-menu-item [routerLink]="['/dashboard/players/search-players']" routerLinkActive="active" class="menu">SEARCH
+        PLAYERS</a>
+      <a mat-menu-item [routerLink]="['/dashboard/players/add-players']" routerLinkActive="active" class="menu">ADD
+        PLAYERS </a>
+    </mat-menu>
+    <mat-menu #matchMenu="matMenu" class="customize">
+      <a mat-menu-item [routerLink]="['/dashboard/matches/fixtures']" routerLinkActive="active" class="menu">FIXTURES</a>
+      <a mat-menu-item [routerLink]="['/dashboard/matches/recent-results']" routerLinkActive="active" class="menu">RECENT
+        RESULTS </a>
+    </mat-menu>
+    <mat-menu #staticMenu="matMenu" class="customize">
+      <a mat-menu-item [routerLink]="['/dashboard/stastics/batting-records']" routerLinkActive="active" class="menu">BATTING
+        RECORDS</a>
+      <a mat-menu-item [routerLink]="['/dashboard/stastics/bowling-records']" routerLinkActive="active" class="menu">BOWLING
+        RECORDS</a>
+      <a mat-menu-item [routerLink]="['/dashboard/stastics/fielding-records']" routerLinkActive="active"
+        class="menu">FIELDING RECORDS</a>
+      <a mat-menu-item [routerLink]="['/dashboard/stastics/player-rankings']" routerLinkActive="active" class="menu">PLAYER
+        RANKINGS</a>
+    </mat-menu>
   </div>
+  <div fxFlex="77" class="router-div">
+    <router-outlet></router-outlet>
+  </div>
+
 </div>
-<mat-menu #match="matMenu" [overlapTrigger]="false">
-  <span (mouseleave)="matchTrigger.closeMenu()">
-    <a mat-menu-item [routerLink]="['/dashboard/matches/fixtures']" routerLinkActive="active">
-      FIXTURES
-    </a>
-    <a mat-menu-item [routerLink]="['/dashboard/matches/recent-results']" routerLinkActive="active">
-      RECENT RESULTS
-    </a>
-  </span>
-</mat-menu>
-<router-outlet></router-outlet>
